--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <title>
             Halaman Card 
         </title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     </head>
     <body>
-        
+        <p class="mt-5">Selamat datang Di Card Profile</p>
     </body>
 </html>
