menambahkan font dan menambahkan beberapa card

--- a/index.html
+++ b/index.html
@@ -6,26 +6,66 @@
             Halaman Card 
         </title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
+        <style>
+          p{
+            font-family: 'viga', sans serif;
+            font-size: 20px;
+          }
+        </style>
     </head>
     <body>
-        <p class="mt-5">Selamat datang Di Card Profile</p>
     <div class="container">
-        <div class="card" style="width: 18rem;">
-            <img src="OIP.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="mt-2">Card Profile</p>
+        <div class="row">
+            <div class="col-sm-4">  
+              <div class="card" style="width: 18rem;">
+                    <img src="OIP.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
             </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="OIP.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+
+            <div class="col-sm-4">
+              <div class="card" style="width: 18rem;">
+                <img src="OIP.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
             </div>
-          </div>
+
+            <div class="col-sm-4">
+              <div class="card" style="width: 18rem;">
+                <img src="OIP.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+              </div>
+            </div>
+            
+            <div class="card mb-3 mt-3" style="max-width: 540px;">
+              <div class="row">
+                <div class="col-sm-4">
+                  <img src="profil.jpg" class="card-img" alt="...">
+                </div>  
+                <div class="col-sm-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
     </body>
 </html>
