--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
               <div class="card" style="width: 18rem;">
                     <img src="OIP.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <button class="btn btn-primary" href="#">Go somewhere</button>
+                      <button class="btn btn-success" href="#">Go here</button>
+                    </div>
+                    <div class="card-footer bg-primary text-center">
+                      <span class="text-white">Follow</span>
                     </div>
                   </div>
             </div>
 
             <div class="col-sm-4">
               <div class="card" style="width: 18rem;">
-                <img src="OIP.jpeg" class="card-img-top" alt="...">
+                <img src="Cyan.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
