--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
               <div class="card" style="width: 18rem;">
                     <img src="OIP.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
+                      <h6 class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Debitis magni aut doloribus.</h6>
+                    <div class="mt-4  ">
                       <button class="btn btn-primary" href="#">Go somewhere</button>
                       <button class="btn btn-success" href="#">Go here</button>
+                      </div>
                     </div>
                     <div class="card-footer bg-primary text-center">
                       <span class="text-white">Follow</span>
