--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
               <div class="card" style="width: 18rem;">
                     <img src="OIP.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                        Debitis magni aut doloribus.</h6>
+                      <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Debitis magni aut doloribus.</p>
                     <div class="mt-4  ">
                       <button class="btn btn-primary" href="#">Go somewhere</button>
                       <button class="btn btn-success" href="#">Go here</button>
@@ -58,20 +58,6 @@
               </div>
             </div>
             
-            <div class="card mb-3 mt-3" style="max-width: 540px;">
-              <div class="row">
-                <div class="col-sm-4">
-                  <img src="profil.jpg" class="card-img" alt="...">
-                </div>  
-                <div class="col-sm-8">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
     </body>
 </html>
