--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <style>
           p{
             font-family: 'viga', sans serif;
-            font-size: 20px;
+            font-size: 15px;
           }
         </style>
     </head>
@@ -20,8 +20,9 @@
         <div class="row">
             <div class="col-sm-4">  
               <div class="card" style="width: 18rem;">
-                    <img src="OIP.jpeg" class="card-img-top" alt="...">
+                    <img src="OIP.jpg" class="card-img-top" alt="..." height="250px">
                     <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
                       <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                         Debitis magni aut doloribus.</p>
                     <div class="mt-4  ">
